[workspace]
resolver = "2"
members = [
  "cranelift-module",
  "dag-encoder",
  "pair-vm",
  "rust-any",
  "rust-boxed-closure",
  "rust-cfg-macro",
  "rust-fibonacci",
  "rust-float-decomposition",
  "rust-macro",
  "rust-ref-ref-trait",
  "rust-stack-vec",
  "rust-stream",
  "rust-sum",
  "rust-vec-to-rc",
]
exclude = ["rust-dyn-future", "rust-generator", "rust-hello-world", "rust-libc"]

[workspace.package]
edition = "2024"

[workspace.lints.clippy]
alloc_instead_of_core = "deny"
dbg_macro = "deny"
derive_partial_eq_without_eq = "deny"
equatable_if_let = "deny"
explicit_deref_methods = "deny"
if_not_else = "deny"
manual_let_else = "deny"
missing_const_for_fn = "deny"
option_if_let_else = "deny"
std_instead_of_alloc = "deny"
std_instead_of_core = "deny"
todo = "deny"
unimplemented = "deny"
uninlined_format_args = "deny"
unused_self = "deny"
use_self = "deny"

[workspace.lints.rust]
warnings = "deny"

[profile.release]
lto = true
