[project]
name = "til"
version = "0.1.0"
description = "Today I learned"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
  "pyrefly>=0.46.3",
]

[tool.pyrefly]
search-path = [
  "stak-code-analysis",
  "python-property-set",
]

[tool.uv.workspace]
members = [
  "stak-code-analysis",
  "python-property-set",
]
