[project]
name = "til"
version = "0.1.0"
description = "Today I learned"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = ["pyrefly>=0.63.1"]

[tool.pyrefly]
search-path = ["stak-code-analysis", "python-property"]

[tool.uv.workspace]
members = ["stak-code-analysis", "python-property"]
